--- a/hacker-books-2.html
+++ b/hacker-books-2.html
@@ -13,15 +13,20 @@
       <div class="wrapper">
         <header>
           <h1>Hacker Books</h1>
-          <h2>Books, recommended by HN community. Harvesting posts only.</h2>
-          <span>How many percent ready for the next release? 10</span><br>
-          <span>make a simple list first. Like, all the books mentioned in posts. Then add all the books mentioned in comments (to those posts). And then comes the rest of the comments related to book titles, nested in other posts.</span><br>
+          <h2>Books, recommended by HN community. Now harvesting posts only.</h2>
+          <span>How many percent ready for the next release? 20</span><br>
+          <span>make a simple list first. List all the books mentioned in posts. Then add all the books mentioned in comments (to those posts). And then comes the rest of the comments related to book titles, nested in other posts.</span><br>
           <nav>
             <ul>
               <li><a href="">All authors</a></li>
               <li><a href="">All tags and categories</a></li>
               <!-- <li><a href="">Lists and collections</a></li> -->
+              <li><a href="">> All books <</a></li>
+              <li><a href="">About</a></li>
             </ul>
+            <section>
+              <span>Get new books</span>
+            </section>
           </nav>
         </header>
         <main>
@@ -50,8 +55,7 @@
               <!-- <span class="cat-link"><a href="">go to all categories</a></span> -->
       			</div>
           </div>
-          <section class="www">
-            <!-- CAN I DO THIS ^^^ ??? -->
+          <section class="book-box">
             <div class="book-card">
                 <div class="book-details">
                   <!-- <div class="book-cover pull-left book-width">
@@ -82,7 +86,7 @@
                 <br>
                 <br> -->
                 <div class="flex-container">
-                  <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a>
+                  <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
                   <br>
                   <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
                   <!-- <br> -->
@@ -109,9 +113,6 @@
                   </ul>
                 </div>
                 <br>
-                <br>
-                <br>
-                <br>
                 <!-- NEED TO FIX ^^^ !!! -->
                 <a href="https://news.ycombinator.com/item?id=8998269" class="thread-name yc"><i class="fa fa-hacker-news" aria-hidden="true"></i>The Three Kinds of Laziness</a>
                 <br>
@@ -121,7 +122,7 @@
                 <br>
                 <br> -->
                 <div class="flex-container">
-                  <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a>
+                  <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
                   <br>
                   <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
                   <!-- <br> -->
@@ -147,7 +148,6 @@
                   </ul>
                 </div>
                 <br>
-                <br>
                 <!-- NEED TO FIX ^^^ !!! -->
                 <a href="https://news.ycombinator.com/item?id=8998269" class="thread-name yc"><i class="fa fa-hacker-news" aria-hidden="true"></i>Is democracy a failure? (1861)</a>
                 <br>
@@ -157,11 +157,11 @@
                 <br>
                 <br> -->
                 <div class="flex-container">
-                  <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a>
+                  <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
                   <br>
-                  <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a>
-                  <br>
-                  <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a>
+                  <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
+                  <!-- <br> -->
+                  <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
                 </div>
             </div>
 
@@ -191,13 +191,9 @@
             <a href="https://www.worldcat.org">WorldCat link</a>
           </section> -->
         </main>
-        <section>
-          <span>Get new books</span>
-        </section>
+
         <footer>
           <!-- <p>Alice</p> -->
-          <a href="">About</a>
-          <a href="">Homepage</a>
           <br>
           <br>
           <br>
