--- a/hacker-books-2.html
+++ b/hacker-books-2.html
@@ -58,11 +58,13 @@
       				<span class="index-item active-item category-item">Self-help<span class="class-total smaller ">8</span></span>
       				<span class="index-item active-item category-item">Psychology<span class="class-total smaller ">6</span></span>
       				<span class="index-item active-item category-item">Biography<span class="class-total smaller ">4</span></span>
+      				<span class="index-item active-item category-item">Phylosophy<span class="class-total smaller ">7</span></span>
               <br>
               <!-- <span class="cat-link"><a href="">go to all categories</a></span> -->
       			</div>
           </div>
-          <section class="book-box">
+          <section>
+            <div class="book-box">
             <div class="book-card">
                 <div class="book-details">
                   <!-- <div class="book-cover pull-left book-width">
@@ -76,25 +78,23 @@
                       <p class="author-name">Robert M. Pirsig</p>
                     </li>
                     <li>
-                      <p class="book-name">Zen and the Art of Motorcycle Maintenance: An Inquiry Into Values<span class="small text-muted left-margin">1974</span></p>
+                      <p class="book-name">Zen and the Art of Motorcycle Maintenance: An Inquiry into Values<span class="small text-muted left-margin">1974</span></p>
                     </li>
                     <li>
-                      <span class="index-item">philosophy</span>
-                      <span class="index-item">non-fiction</span>
+                      <span class="index-item">Philosophy</span>
+                      <span class="index-item">Non-fiction</span>
                     </li>
                   </ul>
                 </div>
 
                 <a href="https://news.ycombinator.com/item?id=8998269" class="thread-name yc"><i class="fa fa-hacker-news" aria-hidden="true"></i>Why Learning to Code Is So Damn Hard</a>
-                <br>
-                <br>
                 <!-- <i class="fa fa-hacker-news" aria-hidden="true"></i>
                 <a href="" class="yc">all news with this book</a>
                 <br>
                 <br> -->
                 <div class="flex-container">
                   <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
-                  <br>
+                  <!-- <br> -->
                   <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
                   <!-- <br> -->
                   <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
@@ -114,8 +114,8 @@
                       <p class="book-name">Walden<span class="small text-muted left-margin">1854</span></p>
                     </li>
                     <li>
-                      <span class="index-item">philosophy</span>
-                      <span class="index-item">non-fiction</span>
+                      <span class="index-item">Philosophy</span>
+                      <span class="index-item">Non-fiction</span>
                     </li>
                   </ul>
                 </div>
@@ -129,7 +129,7 @@
                 <br> -->
                 <div class="flex-container">
                   <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
-                  <br>
+                  <!-- <br> -->
                   <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
                   <!-- <br> -->
                   <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
@@ -145,11 +145,11 @@
                       <p class="author-name">Aldous Huxley</p>
                     </li>
                     <li>
-                      <p class="book-name">The ultimate brave new world<span class="small text-muted left-margin">1931</span></p>
+                      <p class="book-name">The Ultimate Brave New World<span class="small text-muted left-margin">1931</span></p>
                     </li>
                     <li>
                       <!-- <span class="index-item"></span> -->
-                      <span class="index-item">fiction</span>
+                      <span class="index-item">Fiction</span>
                     </li>
                   </ul>
                 </div>
@@ -162,19 +162,117 @@
                 <br> -->
                 <div class="flex-container hidden">
                   <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
-                  <br>
+                  <!-- <br> -->
+                  <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
+                  <!-- <br> -->
+                  <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="book-details">
+                  <!-- <div class="book-cover pull-left book-width">
+                    <img src="img/book-covers/zen.jpg" class="" alt="">
+                  </div> -->
+                  <div class="book-cover-t pull-left book-width">
+                    <img src="img/book-covers/zen.jpg" class="" alt="">
+                  </div>
+                  <ul class="plain-list titles">
+                    <li>
+                      <p class="author-name">Robert M. Pirsig</p>
+                    </li>
+                    <li>
+                      <p class="book-name">Zen and the Art of Motorcycle Maintenance: An Inquiry into Values<span class="small text-muted left-margin">1974</span></p>
+                    </li>
+                    <li>
+                      <span class="index-item">Philosophy</span>
+                      <span class="index-item">Non-fiction</span>
+                    </li>
+                  </ul>
+                </div>
+
+                <a href="https://news.ycombinator.com/item?id=8998269" class="thread-name yc"><i class="fa fa-hacker-news" aria-hidden="true"></i>Why Learning to Code Is So Damn Hard</a>
+
+                <!-- <i class="fa fa-hacker-news" aria-hidden="true"></i>
+                <a href="" class="yc">all news with this book</a>
+                <br>
+                <br> -->
+                <div class="flex-container">
+                  <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
+                  <!-- <br> -->
                   <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
                   <!-- <br> -->
                   <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
                 </div>
             </div>
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <div class="book-card">
+                <div class="book-details">
+                  <div class="book-cover-t pull-left book-width">
+                    <img src="img/book-covers/walden.jpg" class="" alt="">
+                  </div>
+                  <ul class="plain-list titles">
+                    <li>
+                      <p class="author-name">Henry David Thoreau</p>
+                    </li>
+                    <li>
+                      <p class="book-name">Walden<span class="small text-muted left-margin">1854</span></p>
+                    </li>
+                    <li>
+                      <span class="index-item">Philosophy</span>
+                      <span class="index-item">Non-fiction</span>
+                    </li>
+                  </ul>
+                </div>
 
+                <a href="https://news.ycombinator.com/item?id=8998269" class="thread-name yc"><i class="fa fa-hacker-news" aria-hidden="true"></i>The Three Kinds of Laziness</a>
+                <!-- <br>
+                <br> -->
+                <!-- <i class="fa fa-hacker-news" aria-hidden="true"></i>
+                <a href="" class="yc">all news with this book</a>
+                <br>
+                <br> -->
+                <div class="flex-container">
+                  <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
+                  <!-- <br> -->
+                  <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
+                  <!-- <br> -->
+                  <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
+                </div>
+            </div>
+            <div class="book-card">
+                <div class="book-details">
+                  <div class="book-cover-t pull-left book-width">
+                    <img src="img/book-covers/brave.jpg" class="" alt="">
+                  </div>
+                  <ul class="plain-list titles">
+                    <li>
+                      <p class="author-name">Aldous Huxley</p>
+                    </li>
+                    <li>
+                      <p class="book-name">The Ultimate Brave New World<span class="small text-muted left-margin">1931</span></p>
+                    </li>
+                    <li>
+                      <!-- <span class="index-item"></span> -->
+                      <span class="index-item">Fiction</span>
+                    </li>
+                  </ul>
+                </div>
+                <a href="https://news.ycombinator.com/item?id=8998269" class="thread-name yc"><i class="fa fa-hacker-news" aria-hidden="true"></i>Is democracy a failure? (1861)</a>
+                <!-- <br>
+                <br> -->
+                <!-- <i class="fa fa-hacker-news" aria-hidden="true"></i>
+                <a href="" class="yc">all news with this book</a>
+                <br>
+                <br> -->
+                <div class="flex-container hidden">
+                  <!-- <a href="http://a.co/65fRSSI" class="read-preview">Read a free preview</a> -->
+                  <!-- <br> -->
+                  <!-- <a href="http://a.co/04KDRuy" class="book-catalog"><i class="fa fa-amazon" aria-hidden="true"></i>Buy on Amazon</a> -->
+                  <!-- <br> -->
+                  <!-- <a href="https://www.worldcat.org" class="book-catalog">Find at a libary: Worldat</a> -->
+                </div>
+              </div>
+          </div>
           </section>
           <!-- <section>
             <img src="">
