--- a/hacker-books-2.html
+++ b/hacker-books-2.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" type="text/css" href="books.css">
       <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
 
-      <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.js"></script>
+      <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.js"></script> -->
 <div class="container">
     </head>
     <body>
@@ -370,11 +370,11 @@
       </div>
     </body>
     <script>
-    var bookBox = document.querySelector('.book-box');
-    var msnry = new Masonry( bookBox, {
-      // options
-      columnWidth: 6,
-      itemSelector: '.book-card'
-    });
+      // var bookBox = document.querySelector('.book-box');
+      // var msnry = new Masonry( bookBox, {
+      //   // options
+      //   columnWidth: 6,
+      //   itemSelector: '.book-card'
+      // });
     </script>
   </html>
