--- a/hacker-books-2.html
+++ b/hacker-books-2.html
@@ -8,7 +8,7 @@
 
       <meta name=viewport content="width=device-width, initial-scale=1">
 
-      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="../reset.css">
       <link rel="stylesheet" type="text/css" href="books.css">
       <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
@@ -19,23 +19,20 @@
     <body>
       <div class="wrapper">
         <header>
-          <h1>Hacker Books</h1>
-          <h2>Books, recommended by HN community. Now harvesting posts only.</h2>
-          <span>How many percent ready for the next release? 40</span><br>
-          <span>Make a simple list first. List all the books mentioned in posts.<br>
-            Then add all the books mentioned in comments (to those posts).<br>
-            And then comes the rest of the comments related to book titles, nested in other posts.</span><br>
+          <div class="header-titles">
+            <h1>Hacker Books</h1>
+            <h2>Books, recommended by HN community.</h2>
+          </div>
+          <section>
+            <a href="#0"><span class="updates-btn">Get new books</span></a>
+          </section>
           <nav>
             <ul>
-              <li><a href="">All authors</a></li>
-              <li><a href="">All tags and categories</a></li>
+              <li><a href="" class="current">Books </a></li>
+              <li><a href="">Authors</a></li>
+              <li><a href="">Tags and categories</a></li>
               <!-- <li><a href="">Lists and collections</a></li> -->
-              <li><a href="">> All books <</a></li>
-              <li><a href="">About</a></li>
             </ul>
-            <section>
-              <span>Get new books</span>
-            </section>
           </nav>
         </header>
         <main>
@@ -48,6 +45,10 @@
 
       				<!--
       				This is top-level CATEGORY index. It is alphabetically sorted.
+      				-->
+
+      				<!--
+      				Show top 10 or 12 categories – those who have most books. Sort alphabetically.
       				-->
 
               <span class="index-item other-items show-all">Show all books</span>
@@ -302,6 +303,13 @@
           <br>
           <br>
           <br>
+          <br>
+
+          <h2>Books, recommended by HN community. Now harvesting posts only.</h2>
+          <span>How many percent ready for the next release? 40</span><br>
+          <span>Make a simple list first. List all the books mentioned in posts.<br>
+          Then add all the books mentioned in comments (to those posts).<br>
+          And then comes the rest of the comments related to book titles, nested in other posts.</span>
           <br>
           <br>
           <br>
