--- a/hacker-books-2.html
+++ b/hacker-books-2.html
@@ -24,13 +24,15 @@
             <h2>Books, recommended by HN community.</h2>
           </div>
           <section>
-            <a href="#0"><span class="updates-btn">Get new books</span></a>
+            <a href="http://tumblr.us14.list-manage.com/subscribe?u=883863466a386f508af7858e4&id=1ba319d56c" target="_blank"><span class="updates-btn">Get new books</span></a>
           </section>
           <nav>
             <ul>
-              <li><a href="" class="current">Books </a></li>
-              <li><a href="">Authors</a></li>
-              <li><a href="">Tags and categories</a></li>
+              <li><a href="" class="current option">Books </a></li>
+              
+              <li><a href="" class="option">Authors</a></li>
+
+              <!-- <li><a href="" class="option">Tags and categories</a></li> -->
               <!-- <li><a href="">Lists and collections</a></li> -->
             </ul>
           </nav>
@@ -306,10 +308,10 @@
           <br>
 
           <h2>Books, recommended by HN community. Now harvesting posts only.</h2>
-          <span>How many percent ready for the next release? 40</span><br>
+          <span>How many percent ready for the next release? 50 - need data</span><br>
           <span>Make a simple list first. List all the books mentioned in posts.<br>
-          Then add all the books mentioned in comments (to those posts).<br>
-          And then comes the rest of the comments related to book titles, nested in other posts.</span>
+          <i class="text-muted">Then add all the books mentioned in comments (to those posts).<br>
+          And then comes the rest of the comments related to book titles, nested in other posts.</i></span>
           <br>
           <br>
           <br>
@@ -328,7 +330,7 @@
           <br>
           - it's about comments and users recommendations (not YC partners, not Twitter)
           <br>
-          - also, books in the MACRO blog, as a list in collections
+          <i class="text-muted">- also, books in the MACRO blog, as a list in collections</i>
           <br>
           <br>
           - I don't need to see the top popular books as I already know what's on the list, these books have been around for a while, also, the most popular may not be the best, and can be entry-level
@@ -340,7 +342,7 @@
           - add categories that the book was published in (from annotation)
           <br>
           <br>
-          - what if I want to talk about this book? HN doesn't have notifications for new comments. Reddit? Add Goodreads? Most recent thread on HN? Disqus here?
+          <i class="text-muted">- what if I want to talk about this book? HN doesn't have notifications for new comments. Reddit? Add Goodreads? Most recent thread on HN? Disqus here?</i>
           <br>
           - Also posting a link back to discussion here on the HN thread.
           <br>
@@ -350,7 +352,7 @@
           - blogs? that are recommended in HN comments. Sums up to People (as Authors). A directory of bloggers and book authors in Authors section. All books by the author on Amazon. Need a layer that shows titles that are on this website.
           <br>
           <br>
-          - who recommended this book (meaning people, so include usernames)
+          - who recommended this book (meaning people, so include usernames) ?
           <br>
           - how many people recommended this book, how this changed over time
           <br>
@@ -363,11 +365,15 @@
           <br>
           - also, what can I do with Amazon API? direct linking to book preview? managing referrals, better search for books on Amazon? Can I get a cover from Amazon when adding a book?
           <br>
+          1-click flow to download kindle preview from amazon how?
+          <br>
           - view large covers, as you would in a store or a library, probably 3D angle with css
           <br>
           - add a book to HN books directory (point to the thread on HN)
           <br>
-          - NEED comments (disqus) for each book and About page, about page, link to main page, link to news.yc
+          - NEED comments (disqus) for each book - link to Producthunt? and About page (?), about page itself, link to main page, link to news.yc
+          <br>
+          - link to Producthunt, fb plugin
           <br>
           - fix the truncating logic (year is left out when text content is truncated), should be fixed when template rendering is in place
           <br>
